# pyMyHummy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: run_pytest.yml
src/pymyhummy/: scanner.py
tests/: conftest.py  test_scanner.py
