[tool.poetry]
name = "pymyhummy"
version = "0.1.0"
description = "Python library for interacting with a myHummy device"
authors = ["Lewis England"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bleak = "^0.19.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
